Change help hint positioning to fixed: EWD-23295 - Shift main content on expanding TOC
Former-commit-id: 1565eddbcb907c810a2c1cdc32eeaabb4b277f55

--- a/sources/easygenerator.Web/Content/treeOfContent.css
+++ b/sources/easygenerator.Web/Content/treeOfContent.css
@@ -74,7 +74,7 @@
         position: absolute;
         width: 32px;
         height: 21px;
-        left: 10px;
+        right: 10px;
         top: 12px;
         background: url('images/sprites.png') -128px -251px;
     }
